--- a/Pipfile
+++ b/Pipfile
@@ -5,16 +5,18 @@ name = "pypi"
 
 [packages]
 pandas = "*"
-awscli = "*"
-jupyter = "*"
 boto3 = "*"
 pyarrow = "*"
 pyyaml = "*"
+
+[dev-packages]
+awscli = "*"
+jupyter = "*"
 pylint = "*"
 moto = "*"
 coverage = "*"
-
-[dev-packages]
+memory-profiler = "*"
+matplotlib = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.9"
